--- a/front-end/plans.html
+++ b/front-end/plans.html
@@ -19,7 +19,7 @@
                     <h1 class="text-2xl font-bold gradient-text">المسارات البرمجية - مكتبتي الجامعية</h1>
                 </div>
                 <nav class="hidden md:flex space-x-6 rtl:space-x-reverse">
-                    <a href="index-2.html" class="text-gray-300 hover:text-blue-400 transition">الرئيسية</a>
+                    <a href="test-one.html" class="text-gray-300 hover:text-blue-400 transition">الرئيسية</a>
                     <a href="#" class="text-blue-400 font-medium">المسارات</a>
                     <!-- <a href="#" class="text-gray-300 hover:text-blue-400 transition">الدورات</a>
                     <a href="#" class="text-gray-300 hover:text-blue-400 transition">المشاريع</a> -->
@@ -30,6 +30,7 @@
             </div>
         </div>
     </header>
+
 
     <!-- Hero Section -->
     <section class="py-20 bg-gradient-to-b from-gray-800 to-gray-900">
@@ -96,9 +97,10 @@
                                 <i class="fas fa-clock mr-1"></i>
                                 <span>6 أشهر</span>
                             </div>
+                            <a href="plans-python.html">
                             <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm">
                                 ابدأ التعلم <i class="fas fa-arrow-left ml-1"></i>
-                            </button>
+                            </button></a>
                         </div>
                     </div>
                 </div>
@@ -161,10 +163,10 @@
                             <div class="flex items-center text-sm text-gray-400">
                                 <i class="fas fa-clock mr-1"></i>
                                 <span>9 أشهر</span>
-                            </div>
+                            </div> <a href="plans-app.html">
                             <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm">
                                 ابدأ التعلم <i class="fas fa-arrow-left ml-1"></i>
-                            </button>
+                            </button></a>
                         </div>
                     </div>
                 </div>
@@ -178,16 +180,16 @@
                     </div>
                     <div class="p-6">
                         <div class="flex justify-between items-start mb-3">
-                            <h3 class="text-xl font-bold">مسار تطوير الويب</h3>
+                            <h3 class="text-xl font-bold">مسار تصميم الويب</h3>
                             <span class="bg-yellow-900 text-yellow-300 text-xs px-3 py-1 rounded-full">متوسط</span>
                         </div>
                         <p class="text-gray-400 mb-4">
-                            تعلم تطوير تطبيقات الويب الكاملة باستخدام JavaScript، React، Node.js وقواعد البيانات
+                            تعلم تصميم تطبيقات الويب الكاملة باستخدام JavaScript، HTML , CSS ,  وقواعد البيانات
                         </p>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <span class="course-badge bg-gray-800 text-yellow-400 text-xs px-3 py-1 rounded-full">HTML/CSS</span>
-                            <span class="course-badge bg-gray-800 text-yellow-400 text-xs px-3 py-1 rounded-full">React</span>
-                            <span class="course-badge bg-gray-800 text-yellow-400 text-xs px-3 py-1 rounded-full">Node.js</span>
+                            <span class="course-badge bg-gray-800 text-yellow-400 text-xs px-3 py-1 rounded-full">SQL</span>
+                            <span class="course-badge bg-gray-800 text-yellow-400 text-xs px-3 py-1 rounded-full">JavaScript</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <div class="flex items-center text-sm text-gray-400">
@@ -203,6 +205,8 @@
             </div>
         </div>
     </section>
+
+    
 
     <!-- Testimonials -->
     <section class="py-16 bg-gray-800">
@@ -326,6 +330,6 @@
             });
         });
     </script>
-    <script src="js/dark-mode.js"></script>
+    <script src="js/plans.js"></script>
 </body>
 </html>
