--- a/front-end/login.html
+++ b/front-end/login.html
@@ -7,69 +7,247 @@
     <title>مكتبتي الجامعية - تسجيل الدخول</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style-1.css">
+    <style>
+        :root {
+            --primary: #4f46e5;
+            --secondary: #06b6d4;
+            --tertiary-glow: #10b981;
+            --quaternary-glow: #8b5cf6;
+        }
 
+        body {
+            font-family: 'Tajawal', sans-serif;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            color: white;
+            min-height: 100vh;
+        }
+
+        .glass {
+            background: rgba(30, 41, 59, 0.7);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .glow-border {
+            box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
+        }
+
+        .logo-text {
+            font-size: 1.8rem;
+            font-weight: 900;
+            background: linear-gradient(to right, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .btn {
+            padding: 0.5rem 1.5rem;
+            border-radius: 0.5rem;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .primary-btn {
+            background: var(--primary);
+            color: white;
+        }
+
+        .primary-btn:hover {
+            background: #4338ca;
+        }
+
+        .secondary-btn {
+            background: transparent;
+            border: 1px solid var(--primary);
+            color: var(--primary);
+        }
+
+        .secondary-btn:hover {
+            background: rgba(79, 70, 229, 0.1);
+        }
+
+        .form-input {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        .form-input:focus {
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.2);
+            background: rgba(255, 255, 255, 0.08);
+        }
+
+        .form-input::placeholder {
+            color: rgba(255, 255, 255, 0.5);
+        }
+
+        .social-btn {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        .social-btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
+            border-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .logo-animation {
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0px);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+
+            100% {
+                transform: translateY(0px);
+            }
+        }
+
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                radial-gradient(2px 2px at 20px 30px, #eee, transparent),
+                radial-gradient(2px 2px at 40px 70px, rgba(255, 255, 255, 0.5), transparent),
+                radial-gradient(1px 1px at 90px 40px, #fff, transparent),
+                radial-gradient(1px 1px at 130px 80px, rgba(255, 255, 255, 0.8), transparent);
+            background-size: 200px 200px;
+            z-index: -1;
+        }
+
+        .space-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+        }
+
+        .space-layer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                radial-gradient(circle at 20% 50%, rgba(79, 70, 229, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 20%, rgba(6, 182, 212, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 40% 80%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
+        }
+
+        .nebula {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                radial-gradient(circle at 30% 30%, rgba(79, 70, 229, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 70% 70%, rgba(6, 182, 212, 0.05) 0%, transparent 50%);
+            z-index: -1;
+        }
+    </style>
 </head>
 
 <body class="min-h-screen flex items-center justify-center p-4">
-    <div class="w-full max-w-4xl flex rounded-xl shadow-lg overflow-hidden bg-white">
+    <!-- طبقات الفضاء -->
+    <div class="space-container">
+        <div class="space-layer" data-depth="0.1"></div>
+        <div class="space-layer" data-depth="0.2"></div>
+        <div class="space-layer" data-depth="0.3"></div>
+    </div>
+
+    <!-- السديم والمجرات -->
+    <div class="nebula"></div>
+
+    <!-- النجوم المتلألئة -->
+    <div class="stars"></div>
+
+    <div class="w-full max-w-4xl flex rounded-xl shadow-2xl overflow-hidden glass glow-border">
         <!-- Left side - Image and branding -->
         <div
-            class="hidden md:block w-1/2 bg-gradient-to-br from-indigo-600 to-purple-700 p-12 text-white flex flex-col justify-between">
-            <div>
+            class="hidden md:block w-1/2 bg-gradient-to-br from-indigo-600/20 to-purple-700/20 p-12 text-white flex flex-col justify-between relative overflow-hidden">
+            <!-- تأثيرات الخلفية -->
+            <div class="absolute inset-0 bg-gradient-to-br from-indigo-600/10 to-purple-700/10"></div>
+            <div
+                class="absolute top-0 left-0 w-32 h-32 bg-indigo-500/10 rounded-full -translate-x-1/2 -translate-y-1/2">
+            </div>
+            <div
+                class="absolute bottom-0 right-0 w-40 h-40 bg-purple-500/10 rounded-full translate-x-1/2 translate-y-1/2">
+            </div>
+
+            <div class="relative z-10">
                 <div class="logo-animation">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-indigo-300" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                     </svg>
                 </div>
-                <h1 class="text-3xl font-bold mt-6">مكتبتي الجامعية</h1>
-                <p class="mt-4 text-indigo-100">بوابتك إلى عالم المعرفة والتعلم الأكاديمي</p>
+                <h1
+                    class="text-3xl font-bold mt-6 bg-gradient-to-r from-indigo-300 to-purple-300 bg-clip-text text-transparent">
+                    مكتبتي الجامعية</h1>
+                <p class="mt-4 text-indigo-200">بوابتك إلى عالم المعرفة والتعلم الأكاديمي</p>
             </div>
-            <div class="mt-20">
+            <div class="mt-20 relative z-10">
                 <div class="flex items-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2 text-indigo-300" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
-                    <p>وصول سهل إلى آلاف الكتب والمراجع</p>
+                    <p class="text-indigo-100">وصول سهل إلى آلاف الكتب والمراجع</p>
                 </div>
                 <div class="flex items-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2 text-indigo-300" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
-                    <p>تتبع تقدمك الأكاديمي بسهولة</p>
+                    <p class="text-indigo-100">تتبع تقدمك الأكاديمي بسهولة</p>
                 </div>
                 <div class="flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2 text-indigo-300" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 01118 0z" />
                     </svg>
-                    <p>مجتمع تعليمي داعم ومتفاعل</p>
+                    <p class="text-indigo-100">مجتمع تعليمي داعم ومتفاعل</p>
                 </div>
             </div>
-            <div class="mt-8">
-                <p class="text-sm text-indigo-200">© 2023 مكتبتي الجامعية - جميع الحقوق محفوظة</p>
+            <div class="mt-8 relative z-10">
+                <p class="text-sm text-indigo-300">© 2023 مكتبتي الجامعية - جميع الحقوق محفوظة</p>
             </div>
         </div>
 
         <!-- Right side - Form -->
         <div class="w-full md:w-1/2 p-8 md:p-12">
             <div class="text-center mb-10">
-                <h2 class="text-3xl font-bold text-gray-800">مرحباً بعودتك!</h2>
-                <p class="text-gray-600 mt-3">سجل دخولك للوصول إلى مكتبتك الجامعية</p>
+                <h2 class="text-3xl font-bold text-white">مرحباً بعودتك!</h2>
+                <p class="text-gray-300 mt-3">سجل دخولك للوصول إلى مكتبتك الجامعية</p>
             </div>
 
             <!-- Social Login Buttons -->
             <div class="space-y-4 mb-8">
                 <button
-                    class="social-btn w-full flex items-center justify-center py-3 px-4 rounded-lg border border-gray-300 bg-white text-gray-700 hover:bg-gray-50 transition duration-300">
+                    class="social-btn w-full flex items-center justify-center py-3 px-4 rounded-lg transition duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-3" viewBox="0 0 48 48">
                         <path fill="#FFC107"
                             d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z" />
@@ -83,7 +261,7 @@
                     تسجيل الدخول باستخدام جوجل
                 </button>
                 <button
-                    class="social-btn w-full flex items-center justify-center py-3 px-4 rounded-lg border border-gray-300 bg-white text-gray-700 hover:bg-gray-50 transition duration-300">
+                    class="social-btn w-full flex items-center justify-center py-3 px-4 rounded-lg transition duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-3" viewBox="0 0 48 48">
                         <path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z" />
                         <path fill="#fff"
@@ -94,64 +272,65 @@
             </div>
 
             <div class="flex items-center my-6">
-                <div class="flex-grow border-t border-gray-300"></div>
-                <span class="px-4 text-gray-500 text-sm">أو</span>
-                <div class="flex-grow border-t border-gray-300"></div>
+                <div class="flex-grow border-t border-gray-600"></div>
+                <span class="px-4 text-gray-400 text-sm">أو</span>
+                <div class="flex-grow border-t border-gray-600"></div>
             </div>
 
             <!-- Login Form -->
             <form class="space-y-6" id="login-form">
                 <div>
-                    <label class="block text-gray-700 text-sm font-medium mb-2" for="email">البريد الإلكتروني</label>
-                    <input type="email" id="email"
-                        class="form-input w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none"
-                        required>
+                    <label class="block text-gray-300 text-sm font-medium mb-2" for="email">البريد الإلكتروني</label>
+                    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني"
+                        class="form-input w-full px-4 py-3 rounded-lg focus:outline-none" required>
                 </div>
 
                 <div>
                     <div class="flex items-center justify-between mb-2">
-                        <label class="block text-gray-700 text-sm font-medium" for="password">كلمة المرور</label>
-                        <a href="#" class="text-sm text-indigo-600 hover:text-indigo-800">نسيت كلمة المرور؟</a>
+                        <label class="block text-gray-300 text-sm font-medium" for="password">كلمة المرور</label>
+                        <a href="#" class="text-sm text-indigo-400 hover:text-indigo-300 transition duration-300">نسيت
+                            كلمة المرور؟</a>
                     </div>
-                    <input type="password" id="password"
-                        class="form-input w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none"
-                        required>
+                    <input type="password" id="password" placeholder="أدخل كلمة المرور"
+                        class="form-input w-full px-4 py-3 rounded-lg focus:outline-none" required>
                 </div>
 
                 <div class="flex items-center">
                     <input type="checkbox" id="remember"
-                        class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                    <label for="remember" class="mr-2 block text-sm text-gray-700">
+                        class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-600 rounded bg-transparent">
+                    <label for="remember" class="mr-2 block text-sm text-gray-300">
                         تذكرني
                     </label>
                 </div>
 
                 <button type="submit"
-                    class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 px-4 rounded-lg transition duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
+                    class="w-full bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-medium py-3 px-4 rounded-lg transition duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
                     تسجيل الدخول
                 </button>
             </form>
 
             <div class="text-center mt-8">
-                <p class="text-gray-600">
+                <p class="text-gray-400">
                     ليس لديك حساب؟
-                    <a href="creat-user.html" class="text-indigo-600 hover:text-indigo-800 font-medium">إنشاء حساب جديد</a>
+                    <a href="creat-user.html"
+                        class="text-indigo-400 hover:text-indigo-300 font-medium transition duration-300">إنشاء حساب
+                        جديد</a>
                 </p>
             </div>
 
-            <div class="mt-10 pt-6 border-t border-gray-200">
+            <div class="mt-10 pt-6 border-t border-gray-700">
                 <div class="flex justify-center space-x-4 rtl:space-x-reverse">
-                    <a href="#" class="text-gray-400 hover:text-gray-500">
+                    <a href="#" class="text-gray-400 hover:text-gray-300 transition duration-300">
                         <span class="sr-only">سياسة الخصوصية</span>
                         <span class="text-sm">سياسة الخصوصية</span>
                     </a>
-                    <span class="text-gray-300">|</span>
-                    <a href="#" class="text-gray-400 hover:text-gray-500">
+                    <span class="text-gray-600">|</span>
+                    <a href="#" class="text-gray-400 hover:text-gray-300 transition duration-300">
                         <span class="sr-only">شروط الاستخدام</span>
                         <span class="text-sm">شروط الاستخدام</span>
                     </a>
-                    <span class="text-gray-300">|</span>
-                    <a href="#" class="text-gray-400 hover:text-gray-500">
+                    <span class="text-gray-600">|</span>
+                    <a href="#" class="text-gray-400 hover:text-gray-300 transition duration-300">
                         <span class="sr-only">المساعدة</span>
                         <span class="text-sm">المساعدة</span>
                     </a>
@@ -186,7 +365,6 @@
             });
         });
     </script>
-    <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'963d849ba73ae195',t:'MTc1MzI5ODI0Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
 </body>
 
 </html>
