--- a/front-end/pages/about.html
+++ b/front-end/pages/about.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style-1.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
     <style>
         :root {
             --primary: #4f46e5;
@@ -330,11 +330,11 @@
                 <div class="flex items-center">
                     <h1 class="logo-text"> مكتبتي <span> الجامعية</span></h1>
                     <nav class="hidden md:flex mr-8">
-                        <a href="test-one.html"
+                        <a href="../playground/test-one.html"
                             class="mx-3 font-medium text-white hover:text-blue-300 transition">الرئيسية</a>
                         <a href="books.html" class="mx-3 font-medium text-white hover:text-blue-300 transition">المكتبة
                             الرقمية</a>
-                        <a href="channew.html"
+                        <a href="../playground/channew.html"
                             class="mx-3 font-medium text-white hover:text-blue-300 transition">التحديات التعليمية</a>
                     </nav>
                 </div>
@@ -404,28 +404,28 @@
                 <div class="slider-container">
                     <div class="slider" id="university-slider">
                         <div class="slide">
-                            <img src="imges/EIU-img2025-05-05-954543.jpg.webp" alt="حرم الجامعة">
+                            <img src="../imges/EIU-img2025-05-05-954543.jpg.webp" alt="حرم الجامعة">
                             <div class="slide-overlay">
                                 <h3 class="text-xl font-bold">الحرم الجامعي</h3>
                                 <p class="text-gray-300">بيئة تعليمية متطورة</p>
                             </div>
                         </div>
                         <div class="slide">
-                            <img src="imges/EIU-img2022-08-10-988684.jpg.webp" alt="مكتبة الجامعة">
+                            <img src="../imges/EIU-img2022-08-10-988684.jpg.webp" alt="مكتبة الجامعة">
                             <div class="slide-overlay">
                                 <h3 class="text-xl font-bold">المكتبة المركزية</h3>
                                 <p class="text-gray-300">مصادر معرفية شاملة</p>
                             </div>
                         </div>
                         <div class="slide">
-                            <img src="imges/EIU-img2022-08-04-610404.jpg.webp" alt="فصول الدراسة">
+                            <img src="../imges/EIU-img2022-08-04-610404.jpg.webp" alt="فصول الدراسة">
                             <div class="slide-overlay">
                                 <h3 class="text-xl font-bold">قاعات الدراسة</h3>
                                 <p class="text-gray-300">تعليم تفاعلي متقدم</p>
                             </div>
                         </div>
                         <div class="slide">
-                            <img src="imges/logo.png/FreeSample-Vectorizer-io-logo.svg" alt="شعار الجامعة">
+                            <img src="../assets/img/logo.svg" alt="شعار الجامعة">
                             <div class="slide-overlay">
                                 <h3 class="text-xl font-bold">الجامعة الإماراتية الدولية</h3>
                                 <p class="text-gray-300">التميز في التعليم</p>
@@ -636,10 +636,10 @@
                 انضم إلى آلاف الطلاب الذين يستفيدون يومياً من مواردنا التعليمية المتطورة
             </p>
             <div class="flex flex-wrap justify-center gap-4">
-                <a href="creat-user.html" class="download-btn px-8 py-3 rounded-lg font-medium text-lg">
+                <a href="register.html" class="download-btn px-8 py-3 rounded-lg font-medium text-lg">
                     <i class="fas fa-user-plus ml-2"></i>انضم إلينا الآن
                 </a>
-                <a href="test-one.html"
+                <a href="../playground/test-one.html"
                     class="px-8 py-3 rounded-lg font-medium text-lg border-2 border-white text-white hover:bg-white hover:bg-opacity-10 transition">
                     <i class="fas fa-question-circle ml-2"></i>تعرف أكثر
                 </a>
@@ -660,11 +660,11 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4 text-white">روابط سريعة</h3>
                     <ul class="space-y-2">
-                        <li><a href="index-2.html" class="text-gray-400 hover:text-blue-300 transition">الرئيسية</a>
+                        <li><a href="../playground/index-2.html" class="text-gray-400 hover:text-blue-300 transition">الرئيسية</a>
                         </li>
                         <li><a href="books.html" class="text-gray-400 hover:text-blue-300 transition">المكتبة
                                 الرقمية</a></li>
-                        <li><a href="channew.html" class="text-gray-400 hover:text-blue-300 transition">التحديات
+                        <li><a href="../playground/channew.html" class="text-gray-400 hover:text-blue-300 transition">التحديات
                                 التعليمية</a></li>
                     </ul>
                 </div>
@@ -854,7 +854,7 @@
             });
         });
     </script>
-    <script src="js/about.js"></script>
+    <script src="../assets/js/about.js"></script>
 </body>
 
 </html>
