--- a/front-end/pages/books.html
+++ b/front-end/pages/books.html
@@ -71,7 +71,7 @@
                     <h1 class="text-2xl font-bold gradient-text">مكتبتي الجامعية</h1>
                 </div>
                 <nav class="hidden md:flex space-x-6 rtl:space-x-reverse">
-                    <a href="test-one.html" class="text-gray-300 hover:text-blue-400 transition">الرئيسية</a>
+                    <a href="../playground/test-one.html" class="text-gray-300 hover:text-blue-400 transition">الرئيسية</a>
                     <a href="plans.html" class="text-gray-300 hover:text-blue-400 transition">المسارات</a>
                     <a href="#" class="text-blue-400 font-medium">الكتب الجامعية</a>
                 </nav>
@@ -533,7 +533,7 @@
                 <div>
                     <h4 class="text-lg font-bold mb-4 text-white">روابط سريعة</h4>
                     <ul class="space-y-2">
-                        <li><a href="test-one.html" class="text-gray-400 hover:text-blue-400 transition">الرئيسية</a>
+                        <li><a href="../playground/test-one.html" class="text-gray-400 hover:text-blue-400 transition">الرئيسية</a>
                         </li>
                         <li><a href="plans.html" class="text-gray-400 hover:text-blue-400 transition">المسارات</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-blue-400 transition">الأسئلة الشائعة</a></li>
