--- a/front-end/pages/exams.html
+++ b/front-end/pages/exams.html
@@ -218,11 +218,11 @@
                 <div class="flex items-center">
                     <h1 class="logo-text"> مكتبتي <span> الجامعية</span></h1>
                     <nav class="hidden md:flex mr-8">
-                        <a href="index-2.html"
+                        <a href="../playground/index-2.html"
                             class="mx-3 font-medium text-white hover:text-blue-300 transition">الرئيسية</a>
                         <a href="books.html" class="mx-3 font-medium text-white hover:text-blue-300 transition">المكتبة
                             الرقمية</a>
-                        <a href="channew.html"
+                        <a href="../playground/channew.html"
                             class="mx-3 font-medium text-white hover:text-blue-300 transition">التحديات التعليمية</a>
                     </nav>
                 </div>
