--- a/front-end/pages/index.html
+++ b/front-end/pages/index.html
@@ -7,10 +7,10 @@
     <title>مكتبتي  الجامعية | تعلم حمل  والعب التحديات</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap">
-    <link rel="stylesheet" href="./style-1.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
 
    
-    <script src="./main.js"></script>
+    <script src="../assets/js/main.js"></script>
    
 </head>
 
@@ -75,7 +75,7 @@
                         <div class="flex flex-wrap gap-4">
                         <a href="#mp-16" class="px-6 py-3 bg-white text-blue-600 font-bold rounded-lg hover:bg-gray-100 text-center transition  btn bg-transparent border   py-3 px-6 rounded-lg transition duration-500"
                             id="mp-16">اكتشف المسارات</a>
-                           <a href="test-one.html"> <button
+                           <a href="../playground/test-one.html"> <button
                                 class="btn bg-transparent border border-white/20 text-white font-bold py-3 px-6 rounded-lg transition duration-500">جرب
                                 الان مجاناً</button></a>
 
@@ -123,7 +123,7 @@
                     <div class="progress-bar mb-6">
                         <div class="progress" style="width: 75%; --progress-color: var(--primary);"></div>
                     </div>
-                    <a href="plans-web.html"> <button
+                    <a href="../playground/plans-web.html"> <button
                             class="btn w-full bg-transparent border border-primary/50 text-primary hover:text-white font-bold py-2 px-4 rounded-lg transition duration-300">عرض
                             المسار</button></a>
                 </div>
