--- a/front-end/playground/chann-ai.html
+++ b/front-end/playground/chann-ai.html
@@ -258,9 +258,9 @@
                 <div class="flex items-center">
                     <div class="text-2xl font-bold gradient-text">CodeMaster</div>
                     <nav class="hidden md:flex mr-8">
-                        <a href="index.html"
+                        <a href="../pages/index.html"
                             class="mx-3 font-medium text-white hover:text-indigo-400 transition">الرئيسية</a>
-                        <a href="challenges.html"
+                        <a href="channew.html"
                             class="mx-3 font-medium text-white hover:text-indigo-400 transition">التحديات</a>
                         <a href="#" class="mx-3 font-medium text-white hover:text-indigo-400 transition">المسابقات</a>
                         <a href="#" class="mx-3 font-medium text-white hover:text-indigo-400 transition">المجتمع</a>
