--- a/front-end/pages/login.html
+++ b/front-end/pages/login.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style-1.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
     <style>
         :root {
             --primary: #4f46e5;
@@ -312,7 +312,7 @@
             <div class="text-center mt-8">
                 <p class="text-gray-400">
                     ليس لديك حساب؟
-                    <a href="creat-user.html"
+                    <a href="register.html"
                         class="text-indigo-400 hover:text-indigo-300 font-medium transition duration-300">إنشاء حساب
                         جديد</a>
                 </p>
