--- a/front-end/playground/channew.html
+++ b/front-end/playground/channew.html
@@ -384,7 +384,7 @@
                 <div class="flex items-center">
                     <div class="text-2xl font-bold gradient-text">CodeMaster</div>
                     <nav class="hidden md:flex mr-8">
-                        <a href="index.html"
+                        <a href="../pages/index.html"
                             class="mx-3 font-medium text-white hover:text-blue-300 transition">الرئيسية</a>
                         <a href="#" class="mx-3 font-medium text-white hover:text-blue-300 transition">التحديات</a>
                         <a href="#" class="mx-3 font-medium text-white hover:text-blue-300 transition">المسابقات</a>
@@ -401,7 +401,7 @@
                         <div class="font-medium">ياسين الخلاقي</div>
                         <div class="text-xs text-gray-400">المستوى: متقدم</div>
                     </div>
-                    <a href="login.html" class="download-btn px-6 py-2 rounded-lg font-medium">
+                    <a href="../pages/login.html" class="download-btn px-6 py-2 rounded-lg font-medium">
                         <i class="fas fa-sign-in-alt ml-2"></i>تسجيل الدخول
                     </a>
                 </div>
