--- a/front-end/playground/devlo.html
+++ b/front-end/playground/devlo.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الصفحة غير موجودة | مكتبتي الجامعية</title>
-    <link rel="stylesheet" href="./styls.css">
-    <link rel="stylesheet" href="./not-found.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./styls.css">
-    <link rel="stylesheet" href="./books.css">
+    <link rel="stylesheet" href="../assets/css/legacy.css">
+    <link rel="stylesheet" href="../assets/css/pages/not-found.css">
+    <link rel="stylesheet" href="../assets/css/pages/books.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./index.html">
 
 </head>
 
@@ -59,7 +55,7 @@
             </div>
 
             <div class="action-buttons">
-                <a href="index.html" class="home-btn">
+                <a href="../pages/index.html" class="home-btn">
                     <i class="fas fa-home"></i> العودة للصفحة الرئيسية
                 </a>
                 <button onclick="window.history.back()" class="back-btn">
