--- a/front-end/playground/test-one.html
+++ b/front-end/playground/test-one.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="stylesheet" href="style-1.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
     <style>
         /* إضافة أنماط الإشعار الجديد */
         .notification-toast {
@@ -100,8 +100,8 @@
 
                 
                 <div class="flex items-center">
-                    <a href="login.html"> <button class="btn primary-btn">تسجيل الدخول</button></a>
-                    <a href="creat-user.html"> <button class="btn secondary-btn">إنشاء حساب</button></a>
+                    <a href="../pages/login.html"> <button class="btn primary-btn">تسجيل الدخول</button></a>
+                    <a href="../pages/register.html"> <button class="btn secondary-btn">إنشاء حساب</button></a>
                 </div>
                 
             </div>
@@ -120,12 +120,12 @@
     <!-- القائمة الجانبية للكمبيوتر -->
     <div class="nav-links">
         <a href="#">الرئيسية</a>
-        <a href="./books.html">الكتب</a>
-        <a href="./plans.html"> المسارات البرمجية</a>
-        <a href="./exams.html">نماذج الاختبارات</a>
-        <a href="./not-found.html">ارفع ملف </a>
-        <a href="./about.html">عن المكتبة </a>
-        <a href="./setting.html"> الاعدادات </a>
+        <a href="../pages/books.html">الكتب</a>
+        <a href="../pages/plans.html"> المسارات البرمجية</a>
+        <a href="../pages/exams.html">نماذج الاختبارات</a>
+        <a href="../pages/not-found.html">ارفع ملف </a>
+        <a href="../pages/about.html">عن المكتبة </a>
+        <a href="../pages/setting.html"> الاعدادات </a>
     </div>
 
     <!-- المحتوى الرئيسي -->
@@ -157,7 +157,7 @@
                         <div class="flex flex-wrap gap-4">
 
 
-                            <a href="about.html"> <button
+                            <a href="../pages/about.html"> <button
                                     class="btn bg-transparent border border-white/20 text-white font-bold py-3 px-6 rounded-lg transition duration-500">
                                     عن المكتبة</button></a>
                         </div>
