--- a/front-end/pages/not-found.html
+++ b/front-end/pages/not-found.html
@@ -283,6 +283,7 @@
 </head>
 
 <body class="min-h-screen flex items-center justify-center p-4">
+    <div id="site-header"></div>
     <!-- النجوم المتحركة -->
     <div class="stars" id="stars"></div>
 
@@ -485,6 +486,8 @@
             });
         });
     </script>
+    <div id="site-footer"></div>
+    <script src="../assets/js/layout.js"></script>
 </body>
 
 </html>
