--- a/front-end/pages/setting.html
+++ b/front-end/pages/setting.html
@@ -17,58 +17,18 @@
     <div class="space-container fixed inset-0 -z-10">
         <div class="stars absolute inset-0 bg-gradient-to-b from-transparent to-gray-900 opacity-30"></div>
     </div>
+    <div id="site-header"></div>
 
-    <!-- Header -->
-    <header class="sticky top-0 z-50 backdrop-blur-lg bg-opacity-80 bg-gray-900 border-b border-gray-800">
-        <div class="container mx-auto px-4 py-4">
-            <div class="flex justify-between items-center">
-                <div class="flex items-center">
-                    <h1 class="logo-text"> مكتبتي <span> الجامعية</span></h1>
-                </div>
-                <div class="flex items-center space-x-4 space-x-reverse">
-                    <div class="relative">
-                        <div class="user-avatar" id="user-menu-button">
-                            <span>م</span>
-                        </div>
-                        <div class="dropdown-menu" id="user-dropdown">
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-user"></i>
-                                <span>الملف الشخصي</span>
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-cog"></i>
-                                <span>الإعدادات</span>
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-bookmark"></i>
-                                <span>المحفوظات</span>
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                <i class="fas fa-history"></i>
-                                <span>النشاط</span>
-                            </a>
-                            <div class="border-t border-gray-700 my-2"></div>
-                            <a href="login.html" class="dropdown-item text-red-400">
-                                <i class="fas fa-sign-out-alt"></i>
-                                <span>تسجيل الخروج</span>
-                            </a>
-                        </div>
-                    </div>
-                    <span class="text-white font-medium">محمد أحمد</span>
-                </div>
-            </div>
-        </div>
-    </header>
 
     <!-- التنقل العلوي -->
     <div class="top-nav">
         <div class="top-nav-links">
             <a href="index.html">الرئيسية</a>
-            <a href="./books.html">الكتب</a>
-            <a href="./plans.html">المسارات البرمجية</a>
-            <a href="./exams.html">نماذج الاختبارات</a>
-            <a href="./not-found.html">ارفع ملف</a>
-            <a href="./about.html">عن المكتبة</a>
+            <a href="books.html">الكتب</a>
+            <a href="plans.html">المسارات البرمجية</a>
+            <a href="exams.html">نماذج الاختبارات</a>
+            <a href="upload-book.html">ارفع كتاب</a>
+            <a href="about.html">عن المكتبة</a>
             <a href="#" class="active">الإعدادات</a>
         </div>
 
@@ -77,7 +37,7 @@
                 <i class="fas fa-edit ml-2"></i>
                 تعديل الملف الشخصي
             </button>
-            <a href="login.html" class="text-red-400 hover:text-red-300 transition">
+            <a href="../../back-end/auth/logout.php" class="text-red-400 hover:text-red-300 transition">
                 <i class="fas fa-sign-out-alt ml-2"></i>
                 تسجيل الخروج
             </a>
@@ -308,6 +268,9 @@
             });
         });
     </script>
+
+    <div id="site-footer"></div>
+    <script src="../assets/js/layout.js"></script>
 </body>
 
 </html>
